Fix the date button click on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* stylelint-disable no-descending-specificity */
+
 /* Element styling */
 
 body,
@@ -60,12 +62,12 @@ img {
 }
 
 input[type="date"].modal-date-picker {
-  width: 50px;
+  width: 75px;
   height: 20px;
   position: relative;
-  visibility: hidden;
-  right: 12.1rem;
-  top: 0.25rem;
+  opacity: 0;
+  left: 4px;
+  z-index: 2;
 }
 
 button,
@@ -418,6 +420,13 @@ button,
 
 .muscle-tag-container > p {
   padding: 0.1rem 0.75rem;
+}
+
+.work-mod-title > img {
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+  right: 1rem;
 }
 
 .info-icon {
